Whitespace inheritance of message boxes in combos. Fix #1404

--- a/wcomponents-theme/src/main/sass/wc.combo.scss
+++ b/wcomponents-theme/src/main/sass/wc.combo.scss
@@ -69,6 +69,10 @@ datalist {
       width: $wc-icon-normal;
     }
   }
+
+  .wc-fieldindicator {
+    white-space: normal;
+  }
 }
 
 
