--- a/wcomponents-theme/src/main/sass/wc.multiselectpair.scss
+++ b/wcomponents-theme/src/main/sass/wc.multiselectpair.scss
@@ -15,6 +15,7 @@
 
   .wc-fieldindicator {
     display: block;
+    white-space: normal;
   }
 
   label {
